# moovlog

./: .env.example  .eslintrc.js  .gitignore  README.md  _build_all.py  _create_android.py  _fix_workflow.py  _patch_v4.py  _write_apk_yml.py  drive-auth.html  index.html  package-lock.json  package.json  script.js  setup-android-env.ps1  style.css  sw.js  tmp_jobs2.json  tsconfig.base.json  turbo.json  배포가이드.md
android-app/: build_log.txt  gradle.properties  gradlew.bat  settings.gradle  stacktrace_log.txt
android-rn/: package.json
assets/: engine-core-CD1WNmk6.js  engine-core-CVvj_IMC.js  engine-gemini-BCTerkaI.js  engine-gemini-iNdzkyyX.js  engine-script-BjHjxfdR.js  engine-script-Hqvxxul9.js  index-B0gZ3wHz.js  index-B4jVlUhN.js  index-B8EqeA_T.js  index-Bb9z0wqN.js  index-CLeq9meC.js  index-CR51WKoq.js  index-C_b-Up8c.js  index-Ckoht6lv.js  index-DNUYB_AS.js  index-DW4KVxks.js  index-DZSLrTS-.js  index-DifA7JKv.js  index-N9upibLo.js  index-XORQAR9t.js  index-uo1nRj8z.js  index-uu-Ue-8P.js  vendor-DKjQ1qLu.js  vendor-DRc8VREz.js  vendor-DeOn_Cgg.js  vendor-UXfT7uxZ.js  vendor-W8QCPF8C.js  vendor-firebase-5k9doEZj.js  vendor-firebase-BHay5Hlc.js  vendor-firebase-CCYVATJD.js  vendor-firebase-CmLdJ1V2.js  vendor-firebase-D67b0poq.js  vendor-firebase-DkG2A0lU.js  vendor-firebase-Dz_6MYsf.js  vendor-rbkzMVFu.js  vendor-react-CvBl8VdO.js  worker-BK0TPDk5.js
backend/: .env.example  README.md  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: tts.py  video.py  vision.py
electron-app/: config.v2.js  main.js  package.json  preload.js
(+150 files in other folders)
